# sds

./: .gitignore  README.md  pyproject.toml  requirements.txt
build-scripts/: build-deb.sh  build-exe.bat
data/: README.md
src/: main.py
src/core/: README.md
src/db/: README.md
src/ui/: README.md  main_window.py  master_login_widget.py  password_list_widget.py  setup_widget.py
